--- a/login/style.css
+++ b/login/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 @font-face{
     font-family: "Shabnam-FD";
@@ -49,13 +50,14 @@ body{
     
 }
 .form{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
+    gap: 1em; */
     min-width: 260px;
-    gap: 1em;
+    margin-top: 0;
 }
 .title{
-    margin-bottom: .5em;
+    margin-bottom: .8em;
     text-decoration: none;
     font-weight: 100;
     font-size: 1.5rem;
@@ -69,19 +71,66 @@ body{
 .input1 ,.input2, .link-signup{
     margin-bottom: 20px;
 }
-.submit button{
+.input1 input:focus,.input2 input:focus{
+    outline: 2px solid #ccc;
+    box-shadow:0 0 15px #7B1111;
+}
+.input1 input:focus:invalid,.input2 input:focus:invalid {
+    outline: 2px solid rgba(255, 0, 0, 0.806);
+}
+.input1 input::placeholder,.input2 input::placeholder{
+    text-align: center;
+    font-family: Shabnam-FD;
+    font-size: .9rem;
+}
+.input1 input , .input2 input{
+    font-family: Shabnam-FD;
+    font-size: 1.1rem;
+    direction: ltr;
+    
+    /* Set the width and height */
     width: 90%;
+    height: 45px;
+    text-align: center;
+    margin: auto;
+
+    /* Add padding and border */
+    /* padding: 5px; */
+    border: 1px solid #ccc;
+    
+    /* Customize the font */
+    /* font-family: Arial, sans-serif;
+    font-size: 14px; */
+    
+    /* Add some space between the text and the border */
+    /* margin: 5px; */
+    
+    /* Add a background color */
+    background-color: #fff;
+    
+    /* Add some rounded corners */
+    border-radius: 2em;
+    
+    /* Add hover and focus effects */
+  }
+.submit button{
+    box-sizing: border-box;
+    width: 90%;
+    height: 2.5em;
+    font-size: 1.6rem;
     border: none;
-    padding-bottom:5px;
-    padding-top: 5px;
     color: #fff;
     background: #7B1111;
-    border-radius: 18px;
+    border-radius: 51em;
     display: block;
+    margin-top: 1.5em;
+    margin-bottom: .5em;
+    cursor: pointer;
 }
 .link-signup{
     color: #fff;
 }
+
 .link-signup a{
     text-decoration: none;
     color: #7B1111;
@@ -89,4 +138,17 @@ body{
 }
 .link-signup .section1{
     font-size: .8rem;
+}
+.vector{
+    /* min-width: 320px; */
+    /* width: 300px; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    img{
+        width: 265px;
+        /* min-width: 300px;
+        max-width: 320px; */
+    }
 }
