--- a/gallery/style.css
+++ b/gallery/style.css
@@ -113,50 +113,53 @@ body{
   background-color: #a73009;
   transition: 0.2s;
 }
+/*-----------------------MAIN STYLE-----------------------------*/
 .gallery {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: space-around;
-  }
+  margin-top: 1rem;
+  margin-left: 3%;
+  margin-right: 3%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-around;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.gallery-item{
+  min-width: 30%;
+  max-width: 250px;
+}
   
-  .gallery-item img {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-  }
-  .gallery-item{
-    width: 37%;
-  }
-  
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal img {
     display: block;
     max-width: 90%;
-    max-height: 90%;
+    max-height: 85%;
     margin: 0 auto;
-    margin-top: 2%;
+    margin-top: 55px;
     margin-bottom: 2%;
+}  
+.close {
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  cursor: pointer;
 }
-  
-  .close {
-    color: #fff;
-    font-size: 30px;
-    font-weight: bold;
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    cursor: pointer;
-  }
