--- a/gallery/style.css
+++ b/gallery/style.css
@@ -113,6 +113,94 @@ body{
   background-color: #a73009;
   transition: 0.2s;
 }
+.hamburger{
+  position: relative;
+  display: block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  appearance: none;
+  background: none;
+  outline: none;
+  border: none;
+}
+@media screen and (max-width: 1000px) {
+  .header{
+      display: none;
+  }
+  .main_header{
+      height: 4em;
+  }
+  .login_signup{
+    font-size: 1rem;
+  }
+  .header li{
+      font-size: 1.1rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .hamburger {
+      display: none;
+  }
+}
+.hamburger .bar , .hamburger:after , .hamburger:before{
+  content: '';
+  display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #fff;
+  margin: 6px;
+  margin-right: 10px;
+  transition: 0.4s;
+}
+.hamburger.is-active:before{
+  transform: rotate(-45deg) translate(-8px, 6px);
+}
+.hamburger.is-active:after{
+  transform: rotate(45deg) translate(-9px, -8px);
+}
+.hamburger.is-active .bar{
+  opacity: 0;
+}
+.mobile-nav{
+  position: fixed;
+  top: 4em;
+  left: 100%;
+  width: 100%;
+  min-height: 100vh;
+  display: block;
+  z-index: 98;
+  background-color: #eb4d2a;
+  padding-top: 60px;
+  transition: 0.4s;
+}
+.mobile-nav.is-active{
+  left: 0;
+}
+.mobile-nav a{
+  display: block;
+  margin: 0px 50px;
+  min-width: 200px;
+  text-align: center;
+  margin-bottom: 16px;
+  padding: 12px 16px;
+  background-color: #7B1111;
+  color:#fff;
+  text-decoration: none;
+  border-radius: 5em;
+}
+.mobile-nav a:hover{
+  background-color: #6b0f0f;
+  transition: 0.2s;
+}
+.mobile-nav a img{
+  width: 150px;
+}
+#ham-logo{
+  background-color: transparent;
+  padding: 0 16px;
+  
+}
 /*-----------------------MAIN STYLE-----------------------------*/
 .gallery {
   margin-top: 1rem;
