--- a/gallery/style.css
+++ b/gallery/style.css
@@ -213,6 +213,7 @@ body{
 /*-----------------------MAIN STYLE-----------------------------*/
 .gallery {
   margin-top: 1rem;
+  margin-bottom: 1rem;
   margin-left: 3%;
   margin-right: 3%;
   display: flex;
@@ -259,4 +260,68 @@ body{
   top: 20px;
   right: 30px;
   cursor: pointer;
+}
+
+.footer
+{
+    background-color:#D84315;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 30px;
+    align-items: center;
+    padding: 3rem 0;
+    margin: 0 auto;
+}
+.footer-right{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    min-width: 160px;
+    margin-right: 3em;
+}
+.footer-right a{
+    color: white;
+    text-decoration: none;
+}
+.footer-left{
+    color: white;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.footer-left img{
+    width: 15%;    
+}
+.links-title{
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 1.7rem;
+    color:#fff;
+}
+.footer-icon{
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    margin-bottom: -3px;
+}
+.copyright{
+    width: 100%;
+    color: #fff;
+    font-size: 0.8rem;
+    background-color:#D84315;
+    text-align:center ;
+    padding-bottom: 5px;
+}
+.designers{
+    color: #ddd;
+    font-size: 0.7rem;
+}
+.designers a{
+    text-decoration: underline;
+    color: #ddd;
 }
