--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ body{
     }
     .login_signup{
         font-size: 1rem;
+        margin-left: 10px;
     }
     .header li{
         font-size: 1.1rem;
@@ -407,7 +408,8 @@ body{
     flex-direction: column;
 }
 .footer-left img{
-    width: 15%;    
+    width: 15%;
+    /* min-width: 160px;     */
 }
 .links-title{
     margin-top: 10px;
@@ -437,21 +439,16 @@ body{
     text-decoration: underline;
     color: #ddd;
 }
+/*---------------------Article Page Style----------------------------------*/
 .articles
 {
     display: block;
-    margin-right: 10rem;
-    margin-top: 1rem;
-    margin-left: 10rem;
-    margin-bottom: 1rem;
+    margin: 1.5rem 7.5%;
     align-items: center;
     justify-content: center;
     background-color: #ffccb2;
-    padding: 10px 119px;
-    padding-bottom: 15px;
+    padding: 30px 50px;
     border-radius: 30px;
-    padding-left: 50px;
-    
 }
 .title:visited {color:#000;}
 .title:hover {color:#324ab2;}
@@ -464,5 +461,6 @@ body{
     font-size: 2rem;
 }
 .context{
-    max-width: 60vw;
+    max-width: 100%;
+    text-align: justify;
 }
