--- a/gallery/style.css
+++ b/gallery/style.css
@@ -142,6 +142,7 @@ body{
 @media screen and (max-width: 1000px) {
   .login_signup{
     font-size: 1rem;
+    margin-left: 10px;
   }
   .header li{
     font-size: 1.1rem;
