--- a/login/style.css
+++ b/login/style.css
@@ -117,6 +117,7 @@ body{
     box-sizing: border-box;
     width: 90%;
     height: 2.5em;
+    font-family: Shabnam-FD;
     font-size: 1.6rem;
     border: none;
     color: #fff;
