--- a/AdminPanel/style.css
+++ b/AdminPanel/style.css
@@ -8,23 +8,83 @@
     src: url(../fonts/Shabnam-FD.woff2) format("woff2");
 }
 body{
-    background-color: #F5F0DF ;
+    background-color: #F5F0DF;
+    /* background-color: brown; */
     font-family: Shabnam-FD;
 }
 .header{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 90%;
+    width: 95%;
     margin: 10px auto;
     padding: .5em 0;
-    font-size: 2.5rem;
+    font-size: 2.7rem;
     font-style: italic;
-    font-weight: bolder;
+    font-weight: bold;
     background-color:#BF360C;
     color:#fff;
     border-radius: .5em;
 }
+.container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 2em;
+}
 .admin_img{
     width:80px;
+}
+.side_btn{
+    background-color: #FFFEE8;
+    width: 350px;
+    padding: 15px 0;
+    margin-right: 50px;
+    border-radius: 1em;
+}
+.users_btn , .addphoto_btn{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #F46432;
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin: 10px;
+    padding: 20px 20px;
+    border-radius: 1em;
+    cursor: pointer;
+}
+.users_btn{
+    margin-bottom: 20px;
+}
+.users_btn span {
+    padding-right: 70px;
+}
+.users_btn img , .addphoto_btn img{
+    width: 50px;
+}
+.centerbox{
+    background-color: #FFFEE8;
+    width: 65%;
+    height: 35rem;
+    border-radius: 50px 0 50px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.add_remove_btn{
+    background-color: #F5F0DF;
+    margin-top: 10px;
+    padding: 10px 20px;
+    border-radius: 5em;
+}
+.add_remove_btn :first-child{
+    margin-left: 15px;
+}
+.add_remove_btn img{
+    width: 50px;
+}
+.add_remove_btn img:hover{
+    cursor: pointer;
 }
