--- a/AdminPanel/style.css
+++ b/AdminPanel/style.css
@@ -53,6 +53,8 @@ body{
     margin: 10px;
     padding: 20px 20px;
     border-radius: 1em;
+}
+.users_btn:hover , .addphoto_btn :hover{
     cursor: pointer;
 }
 .users_btn{
@@ -72,6 +74,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 1em;
 }
 .add_remove_btn{
     background-color: #F5F0DF;
@@ -87,4 +90,43 @@ body{
 }
 .add_remove_btn img:hover{
     cursor: pointer;
+}
+.user_list{
+    background-color: #F46432;
+    width: 90%;
+    height: 400px;
+    border-radius: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0px;
+}
+.user_list_title{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    font-size: 1.4rem;
+    font-weight: bold;
+    width: 90%;
+    gap: 15em;
+    padding-bottom: 10px;
+    margin-bottom: 1em;
+    border-bottom: 0.2em dashed black;
+    border-width: 3.5px;    
+}
+.user_list_detail{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    font-size: 1.3rem;
+    color: #fff;
+    width: 100%;
+    gap: 16em;
+    margin-bottom: 1em;
+}
+.seprator{
+    height: .2em;
+    width: 80%;
+    background-color: #fff;
+    margin-bottom: 15px;
 }
