AdminPanel Remove user complited!

--- a/AdminPanel/style.css
+++ b/AdminPanel/style.css
@@ -182,3 +182,19 @@ margin-bottom: 5px;
     border-radius: 5em;
     text-align: center;
 }
+.removeuser_btn button{
+    margin: 1em;
+    margin-top: 2em;
+    margin-right: 3.5em;
+    padding-right: 8px;
+    width: 200px;
+    height: 60px;
+    border: none;
+    background-color: #7B1111;
+    color: #fff;
+    font-size: 1.7rem;
+    font-family: Shabnam-FD;
+    font-weight: 800;
+    border-radius: 5em;
+    text-align: center;
+}
