--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ body{
 .activity_title{
     text-align: center;
     width: 100%;
-    font-size: 1.6rem;
+    font-size: 2rem;
     margin-bottom: 20px;
 }
 .activities{
@@ -237,14 +237,30 @@ body{
     
 }
 .activitybox{
-    display: flex;
+    box-sizing: border-box;
     background-color: #F46432;
     min-width: 30%;
     max-width: 300px;
     height: 370px;
     border-radius: 60px;
-    box-shadow: 16px 16px #7D4430 ;
-    justify-content: center;
+    box-shadow: 16px 16px #7D4430;
+    padding: 10px 5%;
+}
+.activitybox_title{
+    color:#fff;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.6rem;
+    margin-bottom: .5em;
+    margin-top: 1em;
+}
+.activitybox_description{
+    color: #ECEFF1;
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.3rem;
+    max-width: 90%;
 }
 @media screen and (max-width: 1400px){
     .activitybox{
