--- a/backend/website/templates/article.html
+++ b/backend/website/templates/article.html
@@ -22,7 +22,7 @@
                         <li class="gallery_nav"><a href="/gallery">گالری عکس</a></li>
                         <li class="article_nav"><a href="/article">مقالات</a></li>
                         <li class="about_nav"><a href="#">درباره ما</a></li>
-                        <li class="contact_nav"><a href="#">تماس با ما</a></li>
+                        <li class="contact_nav"><a href="/contact">تماس با ما</a></li>
                     </ul>
                 </div>
             </nav>
