--- a/backend/website/templates/gallery.html
+++ b/backend/website/templates/gallery.html
@@ -24,7 +24,7 @@
                     <li class="gallery_nav"><a href="/gallery">گالری عکس</a></li>
                     <li class="article_nav"><a href="/article">مقالات</a></li>
                     <li class="about_nav"><a href="#">درباره ما</a></li>
-                    <li class="contact_nav"><a href="#">تماس با ما</a></li>
+                    <li class="contact_nav"><a href="/contact">تماس با ما</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,22 +44,22 @@
 </header>
     <div class="gallery">
         <div class="gallery-item">
-          <img src="/static/images/kyle-johnson-E3zv-4Rdz-Q-unsplash.jpg" alt="Image 1" onclick="openModal('/static/images/kyle-johnson-E3zv-4Rdz-Q-unsplash.jpg')">
+          <img src="/static/images/1.jpg" alt="Image 1" onclick="openModal('/static/images/1.jpg')">
         </div>
         <div class="gallery-item">
-          <img src="/static/images/leif-christoph-gottwald-KhTIw-dLWY4-unsplash.jpg" alt="Image 2" onclick="openModal('/static/images/leif-christoph-gottwald-KhTIw-dLWY4-unsplash.jpg')">
+          <img src="/static/images/3.jpg" alt="Image 2" onclick="openModal('/static/images/3.jpg')">
         </div>
         <div class="gallery-item">
-          <img src="/static/images/marek-piwnicki-WXx-J0J4Lzo-unsplash.jpg" alt="Image 3" onclick="openModal('/static/images/marek-piwnicki-WXx-J0J4Lzo-unsplash.jpg')">
+          <img src="/static/images/5.jpg" alt="Image 3" onclick="openModal('/static/images/5.jpg')">
         </div>
         <div class="gallery-item">
-            <img src="/static/images/kyle-johnson-E3zv-4Rdz-Q-unsplash.jpg" alt="Image 1" onclick="openModal('/static/images/kyle-johnson-E3zv-4Rdz-Q-unsplash.jpg')">
+            <img src="/static/images/2.jpg" alt="Image 1" onclick="openModal('/static/images/2.jpg')">
           </div>
           <div class="gallery-item">
-            <img src="/static/images/leif-christoph-gottwald-KhTIw-dLWY4-unsplash.jpg" alt="Image 2" onclick="openModal('/static/images/leif-christoph-gottwald-KhTIw-dLWY4-unsplash.jpg')">
+            <img src="/static/images/4.jpg" alt="Image 2" onclick="openModal('/static/images/4.jpg')">
           </div>
           <div class="gallery-item">
-            <img src="/static/images/marek-piwnicki-WXx-J0J4Lzo-unsplash.jpg" alt="Image 3" onclick="openModal('/static/images/marek-piwnicki-WXx-J0J4Lzo-unsplash.jpg')">
+            <img src="/static/images/6.jpg" alt="Image 3" onclick="openModal('/static/images/6.jpg')">
           </div>
       </div>
       
