--- a/backend/website/templates/login.html
+++ b/backend/website/templates/login.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/flash-messages.css') }}">
     <link rel="shortcut icon" href="/static/images/ehsanelderly_LOGO-transparent.ico" type="image/x-icon">
+    <script src="{{ url_for('static', filename='styles/flash-messages.js') }}"></script>
     <title>ورود</title>
 </head>
 <body>
+    <div id="flash-messages-container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="flash-message">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
+
     <div class="container">
         <div class="backimg"><img src="/static/images/ehsanelderly_Half-LOGO - Copy.png" alt=""></div>
         <div class="login-form">
