--- a/backend/website/templates/signup.html
+++ b/backend/website/templates/signup.html
@@ -4,12 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static',filename='styles/signup.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/signup.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/flash-messages.css') }}">
     <link rel="shortcut icon" href="/static/images/ehsanelderly_LOGO-transparent.ico" type="image/x-icon">
     <title>ثبت نام</title>
+    <script src="{{ url_for('static', filename='styles/flash-messages.js') }}"></script>
 </head>
 
 <body>
+    <div id="flash-messages-container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="flash-message">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
     
     <div class="backbox"></div>
     <div class="container">
@@ -34,7 +45,7 @@
                     <div class="input4">
                         <label for="password">رمز عبور</label>
                         <input id="password" name="password" type="password" minlength="6" placeholder="رمز عبور">
-                        <input id="password-confirm" name="password-confirm" type="password" minlength="6" placeholder="تایید رمز عبور">
+                        <input id="password-confirm" name="password-confirm" type="password" placeholder="تایید رمز عبور">
                     </div>
                     <div class="submit">
                         <button type="submit">تایید</button>
